// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItem should avoid click on TableRow when syncing 1`] = `[Function]`;

exports[`WalletListItem should avoid click on responsive item when syncing 1`] = `[Function]`;

exports[`WalletListItem should disable the send button when wallet has no balance 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Starred"
        >
          <div
            class="space-x-4 css-5lky4z"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-11"
            >
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star-filled.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="-ml-3 space-x-4 css-1d4ra48"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1 overflow-hidden"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle css-1d4ra48"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="font-semibold justify-end css-1d4ra48"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="CurrencyCell"
        >
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-vs626"
          >
            <div>
              <button
                class="my-auto css-1yqe28v"
                data-testid="WalletListItem__send-button"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletListItem__more-button"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-wlb9q7"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
            data-testid="Modal__overlay"
          >
            <div
              class="css-amqh1w"
              tabindex="-1"
            >
              <div
                class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
                data-testid="Modal__inner"
              >
                <div
                  class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
                >
                  <button
                    class="h-11 w-11 css-12xyeiw"
                    data-testid="Modal__close-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          cross.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="relative flex flex-1 flex-col space-y-4"
                >
                  <h2
                    class="mb-0 text-2xl font-bold"
                  >
                    Wallet Name
                  </h2>
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <div
                      class="whitespace-pre-line text-theme-secondary-text"
                    >
                      Enter a name for this wallet address (only visible to you).
                    </div>
                    <form
                      class="mt-8"
                      data-testid="Form"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="name"
                        >
                          Wallet Name
                        </label>
                        <div
                          class="relative"
                        >
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-invalid="false"
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="UpdateWalletName__input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </fieldset>
                      <div
                        class="css-1tkbsa1"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="UpdateWalletName__cancel"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Cancel
                          </div>
                        </button>
                        <button
                          class="css-1yqe28v"
                          data-testid="UpdateWalletName__submit"
                          disabled=""
                          type="submit"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Save
                          </div>
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`WalletListItem should disable the send button when wallet has no balance on responsive 1`] = `
<DocumentFragment>
  <div
    class="w-full rounded-xl bg-theme-primary-100 p-2 text-left focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:bg-theme-background focus:dark:ring-theme-primary-400 dark:ring-2 dark:ring-theme-secondary-800"
    data-testid="WalletListItemMobile"
    tabindex="0"
  >
    <div
      class="flex items-center space-x-4 p-2 pl-4"
    >
      <div
        class="flex shrink-0 items-center"
      >
        <div
          class="ring-theme-primary-100 dark:ring-transparent shrink-0 css-1qcfibg"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="flex w-20 flex-1 flex-col font-semibold"
      >
        <div
          class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full space-y-1"
        >
          <span
            class="font-semibold text-base text-sm text-theme-text w-full truncate"
            data-testid="Address__alias"
          >
            <span
              class="css-u3jrna"
              data-testid="TruncateEnd"
            >
              ARK Wallet 1
            </span>
          </span>
          <span
            class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
            data-testid="Address__address"
          >
            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
          </span>
        </div>
      </div>
      <div
        class="flex items-center space-x-2 self-start"
      >
        <div
          class="inline-flex items-center space-x-1 border-r border-theme-secondary-300 pr-1 empty:border-r-0 dark:border-theme-secondary-800"
        >
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Ledger"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg>
                ledger.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex shrink-0 items-center justify-center"
          data-testid="WalletIcon__Starred"
        >
          <div
            class="text-theme-warning-400 css-tuuiwl"
            height="18"
            width="18"
          >
            <svg>
              star-filled.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-2 flex overflow-hidden rounded-xl"
    >
      <div
        class="flex flex-1 flex-col justify-between space-y-1 bg-theme-primary-500 py-3 px-4 font-semibold"
      >
        <span
          class="whitespace-nowrap text-sm text-white"
          data-testid="Amount"
        >
          0 DARK
        </span>
        <span
          class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
        >
          N/A
        </span>
      </div>
      <div
        class="flex"
      >
        <button
          class="cursor-not-allowed opacity-50 flex flex-grow items-center justify-center bg-theme-primary-600 py-3 px-3 font-semibold text-white"
          data-testid="WalletListItemMobile--button"
          disabled=""
          type="button"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              double-arrow-right.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
  <table>
    <tbody />
  </table>
</DocumentFragment>
`;

exports[`WalletListItem should handle click on responsive item 1`] = `[Function]`;

exports[`WalletListItem should render when isCompact = false 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Starred"
        >
          <div
            class="space-x-4 css-5lky4z"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-11"
            >
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star-filled.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="-ml-3 space-x-4 css-1d4ra48"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1 overflow-hidden"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle css-1d4ra48"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="font-semibold justify-end css-1d4ra48"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="CurrencyCell"
        >
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-vs626"
          >
            <div>
              <button
                class="my-auto css-1jhy6v9"
                data-testid="WalletListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletListItem__more-button"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-wlb9q7"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
            data-testid="Modal__overlay"
          >
            <div
              class="css-amqh1w"
              tabindex="-1"
            >
              <div
                class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
                data-testid="Modal__inner"
              >
                <div
                  class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
                >
                  <button
                    class="h-11 w-11 css-12xyeiw"
                    data-testid="Modal__close-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          cross.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="relative flex flex-1 flex-col space-y-4"
                >
                  <h2
                    class="mb-0 text-2xl font-bold"
                  >
                    Wallet Name
                  </h2>
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <div
                      class="whitespace-pre-line text-theme-secondary-text"
                    >
                      Enter a name for this wallet address (only visible to you).
                    </div>
                    <form
                      class="mt-8"
                      data-testid="Form"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="name"
                        >
                          Wallet Name
                        </label>
                        <div
                          class="relative"
                        >
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-invalid="false"
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="UpdateWalletName__input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </fieldset>
                      <div
                        class="css-1tkbsa1"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="UpdateWalletName__cancel"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Cancel
                          </div>
                        </button>
                        <button
                          class="css-1yqe28v"
                          data-testid="UpdateWalletName__submit"
                          disabled=""
                          type="submit"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Save
                          </div>
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render when isCompact = true 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Starred"
        >
          <div
            class="space-x-3 css-7ewq14"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-5"
            >
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star-filled.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="-ml-3 space-x-3 css-1rods8x"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-xjjrn6"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1 overflow-hidden"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle css-1rods8x"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="font-semibold justify-end css-1rods8x"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="CurrencyCell"
        >
          <div
            class="justify-end css-1rods8x"
          >
            <span
              class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-16k0yyn"
          >
            <div>
              <button
                class="text-theme-primary-600 hover:text-theme-primary-700 css-12xyeiw"
                data-testid="WalletListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class=""
              data-testid="WalletListItem__more-button"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="-mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-12xyeiw"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
            data-testid="Modal__overlay"
          >
            <div
              class="css-amqh1w"
              tabindex="-1"
            >
              <div
                class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
                data-testid="Modal__inner"
              >
                <div
                  class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
                >
                  <button
                    class="h-11 w-11 css-12xyeiw"
                    data-testid="Modal__close-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          cross.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="relative flex flex-1 flex-col space-y-4"
                >
                  <h2
                    class="mb-0 text-2xl font-bold"
                  >
                    Wallet Name
                  </h2>
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <div
                      class="whitespace-pre-line text-theme-secondary-text"
                    >
                      Enter a name for this wallet address (only visible to you).
                    </div>
                    <form
                      class="mt-8"
                      data-testid="Form"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="name"
                        >
                          Wallet Name
                        </label>
                        <div
                          class="relative"
                        >
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-invalid="false"
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="UpdateWalletName__input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </fieldset>
                      <div
                        class="css-1tkbsa1"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="UpdateWalletName__cancel"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Cancel
                          </div>
                        </button>
                        <button
                          class="css-1yqe28v"
                          data-testid="UpdateWalletName__submit"
                          disabled=""
                          type="submit"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Save
                          </div>
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render when isLargeScreen = false 1`] = `
<div>
  <div
    class="w-full rounded-xl bg-theme-primary-100 p-2 text-left focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:bg-theme-background focus:dark:ring-theme-primary-400 dark:ring-2 dark:ring-theme-secondary-800"
    data-testid="WalletListItemMobile"
    tabindex="0"
  >
    <div
      class="flex items-center space-x-4 p-2 pl-4"
    >
      <div
        class="flex shrink-0 items-center"
      >
        <div
          class="ring-theme-primary-100 dark:ring-transparent shrink-0 css-1qcfibg"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="flex w-20 flex-1 flex-col font-semibold"
      >
        <div
          class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full space-y-1"
        >
          <span
            class="font-semibold text-base text-sm text-theme-text w-full truncate"
            data-testid="Address__alias"
          >
            <span
              class="css-u3jrna"
              data-testid="TruncateEnd"
            >
              ARK Wallet 1
            </span>
          </span>
          <span
            class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
            data-testid="Address__address"
          >
            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
          </span>
        </div>
      </div>
      <div
        class="flex items-center space-x-2 self-start"
      >
        <div
          class="inline-flex items-center space-x-1 border-r border-theme-secondary-300 pr-1 empty:border-r-0 dark:border-theme-secondary-800"
        >
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Ledger"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg>
                ledger.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex shrink-0 items-center justify-center"
          data-testid="WalletIcon__Starred"
        >
          <div
            class="text-theme-warning-400 css-tuuiwl"
            height="18"
            width="18"
          >
            <svg>
              star-filled.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-2 flex overflow-hidden rounded-xl"
    >
      <div
        class="flex flex-1 flex-col justify-between space-y-1 bg-theme-primary-500 py-3 px-4 font-semibold"
      >
        <span
          class="whitespace-nowrap text-sm text-white"
          data-testid="Amount"
        >
          33.75089801 DARK
        </span>
        <span
          class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
        >
          N/A
        </span>
      </div>
      <div
        class="flex"
      >
        <button
          class="flex flex-grow items-center justify-center bg-theme-primary-600 py-3 px-3 font-semibold text-white"
          data-testid="WalletListItemMobile--button"
          type="button"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              double-arrow-right.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletListItem should render when isLargeScreen = false and wallet is not fully synced 1`] = `
<div>
  <div
    class="w-full rounded-xl bg-theme-primary-100 p-2 text-left focus:outline-none focus:ring-2 focus:ring-theme-primary-400 dark:bg-theme-background focus:dark:ring-theme-primary-400 dark:ring-2 dark:ring-theme-secondary-800"
    data-testid="WalletListItemMobile"
    tabindex="-1"
  >
    <div
      class="flex items-center space-x-4 p-2 pl-4"
    >
      <div
        class="flex shrink-0 items-center"
      >
        <div
          class="ring-theme-primary-100 dark:ring-transparent shrink-0 css-1qcfibg"
          data-testid="Avatar"
        >
          <div
            class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
          >
            <img
              alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
              title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
            />
          </div>
        </div>
      </div>
      <div
        class="flex w-20 flex-1 flex-col font-semibold"
      >
        <div
          class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full space-y-1"
        >
          <span
            class="font-semibold text-base text-sm text-theme-text w-full truncate"
            data-testid="Address__alias"
          >
            <span
              class="css-u3jrna"
              data-testid="TruncateEnd"
            >
              ARK Wallet 1
            </span>
          </span>
          <span
            class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
            data-testid="Address__address"
          >
            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
          </span>
        </div>
      </div>
      <div
        class="flex items-center space-x-2 self-start"
      >
        <div
          class="inline-flex items-center space-x-1 border-r border-theme-secondary-300 pr-1 empty:border-r-0 dark:border-theme-secondary-800"
        >
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Ledger"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg>
                ledger.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="flex shrink-0 items-center justify-center"
          data-testid="WalletIcon__Starred"
        >
          <div
            class="text-theme-warning-400 css-tuuiwl"
            height="18"
            width="18"
          >
            <svg>
              star-filled.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-2 flex overflow-hidden rounded-xl"
    >
      <div
        class="flex flex-1 flex-col justify-between space-y-1 bg-theme-primary-500 py-3 px-4 font-semibold"
      >
        <span>
          <span
            class="flex max-w-full items-center overflow-hidden leading-none"
          >
            <span
              class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
              style="width: 100px; height: 16px;"
            >
              ‌
            </span>
            ‌
          </span>
        </span>
        <span
          class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
        >
          N/A
        </span>
      </div>
      <div
        class="flex"
      >
        <button
          class="cursor-not-allowed opacity-50 flex flex-grow items-center justify-center bg-theme-primary-600 py-3 px-3 font-semibold text-white"
          data-testid="WalletListItemMobile--button"
          disabled=""
          type="button"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              double-arrow-right.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WalletListItem should render when isLargeScreen = true 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Starred"
        >
          <div
            class="space-x-4 css-5lky4z"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-11"
            >
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star-filled.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="-ml-3 space-x-4 css-1d4ra48"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1 overflow-hidden"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle css-1d4ra48"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="font-semibold justify-end css-1d4ra48"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="CurrencyCell"
        >
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-vs626"
          >
            <div>
              <button
                class="my-auto css-1jhy6v9"
                data-testid="WalletListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletListItem__more-button"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-wlb9q7"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
            data-testid="Modal__overlay"
          >
            <div
              class="css-amqh1w"
              tabindex="-1"
            >
              <div
                class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
                data-testid="Modal__inner"
              >
                <div
                  class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
                >
                  <button
                    class="h-11 w-11 css-12xyeiw"
                    data-testid="Modal__close-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          cross.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="relative flex flex-1 flex-col space-y-4"
                >
                  <h2
                    class="mb-0 text-2xl font-bold"
                  >
                    Wallet Name
                  </h2>
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <div
                      class="whitespace-pre-line text-theme-secondary-text"
                    >
                      Enter a name for this wallet address (only visible to you).
                    </div>
                    <form
                      class="mt-8"
                      data-testid="Form"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="name"
                        >
                          Wallet Name
                        </label>
                        <div
                          class="relative"
                        >
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-invalid="false"
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="UpdateWalletName__input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </fieldset>
                      <div
                        class="css-1tkbsa1"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="UpdateWalletName__cancel"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Cancel
                          </div>
                        </button>
                        <button
                          class="css-1yqe28v"
                          data-testid="UpdateWalletName__submit"
                          disabled=""
                          type="submit"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Save
                          </div>
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render when isLargeScreen = true and wallet is not fully synced 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Starred"
        >
          <div
            class="space-x-4 css-5lky4z"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-11"
            >
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star-filled.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="-ml-3 space-x-4 css-1d4ra48"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1 overflow-hidden"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle css-1d4ra48"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="font-semibold justify-end css-1d4ra48"
          >
            <span>
              <span
                class="flex max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                  style="width: 100px; height: 16px;"
                >
                  ‌
                </span>
                ‌
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="CurrencyCell"
        >
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-vs626"
          >
            <div>
              <button
                class="my-auto css-1yqe28v"
                data-testid="WalletListItem__send-button"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletListItem__more-button"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-j822yf"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
            data-testid="Modal__overlay"
          >
            <div
              class="css-amqh1w"
              tabindex="-1"
            >
              <div
                class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
                data-testid="Modal__inner"
              >
                <div
                  class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
                >
                  <button
                    class="h-11 w-11 css-12xyeiw"
                    data-testid="Modal__close-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          cross.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="relative flex flex-1 flex-col space-y-4"
                >
                  <h2
                    class="mb-0 text-2xl font-bold"
                  >
                    Wallet Name
                  </h2>
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <div
                      class="whitespace-pre-line text-theme-secondary-text"
                    >
                      Enter a name for this wallet address (only visible to you).
                    </div>
                    <form
                      class="mt-8"
                      data-testid="Form"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="name"
                        >
                          Wallet Name
                        </label>
                        <div
                          class="relative"
                        >
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-invalid="false"
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="UpdateWalletName__input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </fieldset>
                      <div
                        class="css-1tkbsa1"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="UpdateWalletName__cancel"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Cancel
                          </div>
                        </button>
                        <button
                          class="css-1yqe28v"
                          data-testid="UpdateWalletName__submit"
                          disabled=""
                          type="submit"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Save
                          </div>
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render with a N/A for fiat 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Starred"
        >
          <div
            class="space-x-4 css-5lky4z"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-11"
            >
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star-filled.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="-ml-3 space-x-4 css-1d4ra48"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1 overflow-hidden"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle css-1d4ra48"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="font-semibold justify-end css-1d4ra48"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="CurrencyCell"
        >
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-vs626"
          >
            <div>
              <button
                class="my-auto css-1jhy6v9"
                data-testid="WalletListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletListItem__more-button"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-wlb9q7"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
            data-testid="Modal__overlay"
          >
            <div
              class="css-amqh1w"
              tabindex="-1"
            >
              <div
                class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
                data-testid="Modal__inner"
              >
                <div
                  class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
                >
                  <button
                    class="h-11 w-11 css-12xyeiw"
                    data-testid="Modal__close-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          cross.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="relative flex flex-1 flex-col space-y-4"
                >
                  <h2
                    class="mb-0 text-2xl font-bold"
                  >
                    Wallet Name
                  </h2>
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <div
                      class="whitespace-pre-line text-theme-secondary-text"
                    >
                      Enter a name for this wallet address (only visible to you).
                    </div>
                    <form
                      class="mt-8"
                      data-testid="Form"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="name"
                        >
                          Wallet Name
                        </label>
                        <div
                          class="relative"
                        >
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-invalid="false"
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="UpdateWalletName__input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </fieldset>
                      <div
                        class="css-1tkbsa1"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="UpdateWalletName__cancel"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Cancel
                          </div>
                        </button>
                        <button
                          class="css-1yqe28v"
                          data-testid="UpdateWalletName__submit"
                          disabled=""
                          type="submit"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Save
                          </div>
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`WalletListItem should render with default BTC as default exchangeCurrency 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1gk67vk"
        data-testid="TableRow"
      >
        <td
          data-testid="TableCell_Starred"
        >
          <div
            class="space-x-4 css-5lky4z"
          >
            <div
              class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-11"
            >
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star-filled.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          data-testid="TableCell_Wallet"
        >
          <div
            class="-ml-3 space-x-4 css-1d4ra48"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-20 flex-1 overflow-hidden"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="justify-center text-sm font-bold text-center align-middle css-1d4ra48"
          >
            <div
              class="inline-flex items-center space-x-1"
            >
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__Ledger"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-700"
                data-testid="WalletIcon__TestNetwork"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    code.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="font-semibold justify-end css-1d4ra48"
          >
            <span
              class="whitespace-nowrap"
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
          data-testid="CurrencyCell"
        >
          <div
            class="justify-end css-1d4ra48"
          >
            <span
              class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="justify-end text-theme-secondary-text css-vs626"
          >
            <div>
              <button
                class="my-auto css-1jhy6v9"
                data-testid="WalletListItem__send-button"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Send
                </div>
              </button>
            </div>
            <div
              class="ml-3"
              data-testid="WalletListItem__more-button"
            >
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="flex-1 bg-theme-primary-600 text-white hover:bg-theme-primary-700 css-wlb9q7"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          ellipsis-vertical.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
            data-testid="Modal__overlay"
          >
            <div
              class="css-amqh1w"
              tabindex="-1"
            >
              <div
                class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
                data-testid="Modal__inner"
              >
                <div
                  class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
                >
                  <button
                    class="h-11 w-11 css-12xyeiw"
                    data-testid="Modal__close-button"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="css-v0ob3f"
                        height="16"
                        width="16"
                      >
                        <svg>
                          cross.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
                <div
                  class="relative flex flex-1 flex-col space-y-4"
                >
                  <h2
                    class="mb-0 text-2xl font-bold"
                  >
                    Wallet Name
                  </h2>
                  <div
                    class="flex flex-1 flex-col"
                  >
                    <div
                      class="whitespace-pre-line text-theme-secondary-text"
                    >
                      Enter a name for this wallet address (only visible to you).
                    </div>
                    <form
                      class="mt-8"
                      data-testid="Form"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="name"
                        >
                          Wallet Name
                        </label>
                        <div
                          class="relative"
                        >
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-invalid="false"
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="UpdateWalletName__input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </fieldset>
                      <div
                        class="css-1tkbsa1"
                      >
                        <button
                          class="css-1jhy6v9"
                          data-testid="UpdateWalletName__cancel"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Cancel
                          </div>
                        </button>
                        <button
                          class="css-1yqe28v"
                          data-testid="UpdateWalletName__submit"
                          disabled=""
                          type="submit"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            Save
                          </div>
                        </button>
                      </div>
                    </form>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
